# Compiler

./: README.md
pljit/: CMakeLists.txt  main.cpp
pljit/ASTDataStructures/: ASTNode.cpp  ASTNode.h  ASTTree.cpp  ASTTree.h
pljit/Milestone1/: SourceCodeManager.cpp  SourceCodeManager.h
pljit/Milestone2/: Token.cpp  Token.h
pljit/Milestone3/: Node.cpp  Node.h  ParseTreePrintVisitor.h  ParseTreeVisitor.h  Parser.cpp  Parser.h  ParserTreePrintVisitor.cpp
pljit/Milestone4/: ASTNode.cpp  ASTNode.h  ASTSymbolTable.cpp  ASTSymbolTable.h  ASTTree.cpp  ASTTree.h  ASTTreePrintVisitor.cpp  ASTTreePrintVisitor.h  ASTTreeVisitor.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h
pljit/Milestone5/: ASTEvaluator.cpp  ASTEvaluator.h  OptimizationPass.cpp  OptimizationPass.h
pljit/Milestone6/: Pljit.cpp  Pljit.h
pljit/Pljit/: Pljit.cpp  Pljit.h
test/: CMakeLists.txt  TestEvaluation.cpp  TestLexer.cpp  TestParser.cpp  TestPljit.cpp  TestSemantic.cpp
